syntax = "proto3";
package com.ouyu.im;
option optimize_for  = SPEED;

// 私聊,所有定义的消息字段不得超过10个，外部客户端使用
message PChatMessage {
  // 发送者
  string from = 1;

  // 接收者
  string to  = 2;

  // 创建时间戳（毫秒）
  int64 create_time = 3;

  // 内容类型，如文本，图片，音频，视频...，全部以bytes 传输
  int32 content_type = 4;

  // 具体内容
  bytes content = 5;
}




